# drone-AI-v2

./: .gitignore  PLAN.md  README.md  ROADMAP.md  pyproject.toml  run.bat  run.sh
.claude/: settings.local.json
docs/: README.md  architecture.md  comms.md  crash_model.md  deadlines.md  experiments.md  future_image_training.md  goals.md  inspector_ui.md  lessons_learned.md  mission_classes.md  phasing.md  physics_realism.md  prevention.md  quickstart.md  sensors.md  tier_system.md  training.md
docs/modules/: adaptive.md  flycontrol.md  manager.md  pathfinder.md  perception.md  personality.md  storage.md  swarm.md
src/drone_ai/: __init__.py  app.py  cli.py  curriculum.py  drone.py  experiment.py  grading.py
src/drone_ai/modules/adaptive/: __init__.py  learner.py  rollback.py  soft_bounds.py  train.py  warden.py
src/drone_ai/modules/flycontrol/: __init__.py  agent.py  environment.py  pd_controller.py  train.py
src/drone_ai/modules/manager/: __init__.py  planner.py  train.py
src/drone_ai/modules/pathfinder/: __init__.py  algorithms.py  train.py
src/drone_ai/modules/perception/: __init__.py  agents.py  detector.py  hazards.py  obstacles.py  targets.py  tracker.py  train.py
src/drone_ai/modules/personality/: __init__.py  (+2 more)
src/drone_ai/simulation/: __init__.py  physics.py  world.py
src/drone_ai/viz/: __init__.py  inspector_adaptive.py  inspector_common.py  inspector_manager.py  inspector_pathfinder.py  inspector_perception.py  inspector_personality.py  inspector_storage.py  inspector_structure.py  inspector_swarm.py  launcher.py  renderer3d.py  trainer_ui.py
(+7 files in other folders)
